# Raspberry-Pi-Pico-for-OpenBSD

./: LICENSE.md  README.md
arm-none-eabi/: Makefile  Makefile.inc
arm-none-eabi/binutils/: Makefile
arm-none-eabi/binutils/pkg/: PFRAG.arm  PLIST
arm-none-eabi/gcc/: Makefile
arm-none-eabi/gcc-bootstrap/: Makefile
arm-none-eabi/gcc-bootstrap/pkg/: PLIST
arm-none-eabi/gcc/patches/: patch-Makefile_in
arm-none-eabi/gcc/pkg/: PFRAG.arm  PLIST
arm-none-eabi/gdb/CVS/: Entries
arm-none-eabi/gdb/patches/CVS/: Entries
arm-none-eabi/newlib/: Makefile
arm-none-eabi/newlib/pkg/: PLIST
example/: CMakeLists.txt  make.sh  make2.sh
raspberrypi-pico-sdk/: Makefile  distinfo
raspberrypi-pico-sdk/patches/: patch-src_rp2_common_pico_runtime_runtime_c
raspberrypi-pico-sdk/pkg/: PLIST
